--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+.gradle
+/build/
+!gradle/wrapper/gradle-wrapper.jar
+
+# IDE files
+.idea
+*.iws
+*.iml
+*.ipr
+/out/
+
 # Compiled class file
 *.class
 
