--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ sourceSets {
 }
 
 dependencies {
-    implementation files('libs/netlogo-6.0.4.jar')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
