--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven {
+        url 'https://dl.bintray.com/netlogo/NetLogo-JVM'
+    }
 }
 
 sourceSets {
@@ -38,7 +41,7 @@ sourceSets {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'org.nlogo:netlogo:6.0.4'
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
