--- a/build.gradle
+++ b/build.gradle
@@ -41,11 +41,15 @@ sourceSets {
 }
 
 dependencies {
+    annotationProcessor 'org.projectlombok:lombok'
+
     compile 'org.nlogo:netlogo:6.0.4'
+    compile 'org.projectlombok:lombok'
+
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-    compileOnly('org.projectlombok:lombok')
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
