Put all commands in properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,72 @@
 netlogo-wrapper.model-filename=TrustModel.nlogo
+
+
+# All variables with Commands related to Plots
+plot-clientHealthStatus=mean [ HealthStatus ] of clients
+plot-personalModerator=mean [ HealthStatus ] of clients * 10
+plot-personalModeratorAtFalseStatus=count clients with [ AtFaultStatus = 2 ]
+plot-clientStatusChart=mean [ ycor ] of clients * 10
+plot-clientStatusChart3PlusYears=count clients with [ xcor > 250 ]
+
+
+# All variables with Commands related to Sliders
+slider-newClients=NewClients
+slider_roadSafetyEffectiveness=Road_Safety_Effectiveness
+slider_injuryRecovery=InjuryRecovery
+slider_randomVariation=RandomVariation
+slider_recalculateDrift=RecalculateDrift
+slider_shockZone1Starts=ShockZone1Starts
+slider_shockZone1Ends=ShockZone1Ends
+slider_shockZone2Starts=ShockZone2Starts
+slider_shockZone2Ends=ShockZone2Ends
+slider_reliefZone1Starts=ReliefZone1Starts
+slider_reliefZone1Ends=ReliefZone1Ends
+slider_reliefZone2Starts=ReliefZone2Starts
+slider_reliefZone2Ends=ReliefZone2Ends
+slider_shockZone1Increase=ShockZone1Increase
+slider_shockZone2Increase=ShockZone2Increase
+slider_reliefZone1Decrease=ReliefZone1Decrease
+slider_reliefZone2Decrease=ReliefZone2Decrease
+slider_driftModifier=DriftModifier
+slider_solicitors=Solicitors
+
+# All variables with Commands related to Labels
+
+label-clientsGreater5Yrs=count clients with [ xcor > 250 ]
+label-injurySeverity=mean [ InjurySeverity ] of clients
+label-atFaultStatus=mean [ AtFaultStatus ] of clients
+label-healthStatus=mean [ HealthStatus ] of clients
+label-previousInjury=mean [ PreviousInjury ] of clients
+label-embeddedness=mean [ Embeddedness ] of clients
+label-employmentStatus=mean [ EmploymentStatus ] of clients
+label-vulnerableStatus=mean [ VulnerableStatus ] of clients
+label-gender=mean [ Gender ] of clients
+label-age=mean [ Age ] of clients
+label-claimDuration=mean [ ClaimDuration ] of clients
+label-injuryClassification=mean [ InjuryClassification ] of clients
+label-education=mean [ Education ] of clients
+label-drift=mean [ Drift ] of clients
+label-waitListEffect=mean [ Waitlisteffect ] of clients
+label-driftWaitListEffect=mean [ Drift - Waitlisteffect ] of clients
+label-currentDrift=CurrentDrift
+label-time=time
+label-recalculateDrift=RecalculateDrift
+label-costs=costs
+label-meanRecoveryStatus=mean [ ycor ] of clients + 100
+label-totalClients=TotalClients
+label-exit=TotalClients - count clients
+label-goodExit6Months=GoodExit6Months
+label-goodExit18Months=GoodExit18Months
+label-goodExit24Months=GoodExit24Months
+label-goodExit36Months=GoodExit36Months
+label-neutralExit36PlusMonths=NeutralExit36PlusMonths
+label-bottom6Mo=BadExit6Months
+label-bottom18Mo=BadExit18Months
+label-bottom24Mo=BadExit24Months
+label-bottom36Mo=BadExit36Months
+label-bottom36PlusMo=BadExit36PlusMonths
+label-commonLaw#=CommonLawCapture
+label-countClient=count clients
+label-commonLaw%=100 * CommonLawCapture / (TotalClients - count clients)
+label-percentGoodExit=100 * ( GoodExit6Months + GoodExit18Months + GoodExit24Months + GoodExit36Months ) / ( TotalClients - count clients )
+label-percentBadExit=100 * count clients with [RockBottom = 1] / (TotalClients - count clients)
