Add more plots variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,15 @@ netlogo-wrapper.model-filename=TrustModel.nlogo
 
 # All variables with Commands related to Plots
 plot-clientHealthStatus=mean [ HealthStatus ] of clients
-plot-personalModerator=mean [ HealthStatus ] of clients * 10
-plot-personalModeratorAtFalseStatus=count clients with [ AtFaultStatus = 2 ]
-plot-clientStatusChart=mean [ ycor ] of clients * 10
-plot-clientStatusChart3PlusYears=count clients with [ xcor > 250 ]
+plot-personalModerator_HealthStatus=mean [ HealthStatus ] of clients * 10
+plot-personalModerator_AtFalseStatus=count clients with [ AtFaultStatus = 2 ]
+plot-clientStatusChart_Health=mean [ ycor ] of clients * 10
+plot-clientStatusChart_5Years=count clients with [ xcor > 250 ]
+plot-clientStatusChart_6Months=count clients with [ xcor > -250 ] 
+plot-clientStatusChart_3PlusYears=count clients with [ xcor > 50 ]
+plot-upperLowerLimitsOfClientHealth_Healthy=count clients with [ color = green ]
+plot-upperLowerLimitsOfClientHealth_pen1=count clients with [ color = orange ] 
+plot-costPerClient=costs / count clients
 
 
 # All variables with Commands related to Sliders
